Heisenbug, make ColumnInfo collections more thread-safe Also, don't need to specify BufferedReader buffer size in TabLoader()